<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E- mail</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
    <string name="senha">Senha</string>
    <string name="digite_seu_senha">Digite seu senha</string>
    <string name="login">Login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_um_senha">Digite um senha</string>
</resources>