<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/e_mail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:background="@drawable/ic_backgroud"
            android:textColorHint="@color/black"
            android:hint="@string/digite_o_seu_e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/senha" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textColorHint="@color/black"
            android:background="@drawable/ic_backgroud"
            android:hint="@string/digite_seu_senha"
            android:inputType="textPassword"
            android:padding="15dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_backgroud_btn"
            android:text="@string/login"
            android:textColor="@color/color_default"
            android:textSize="20dp"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btncreat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:text="Criar conta "/>

            <TextView
                android:id="@+id/btnrecover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:text="Recuperar conta "/>


        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_margin="15dp"
            android:indeterminateTint="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>